Added main loop of programm and exit command.

--- a/src/main/resources/MessagesBundle.properties
+++ b/src/main/resources/MessagesBundle.properties
@@ -1,7 +1,8 @@
 welcome = Welcome to task manager.
-help = version - Display program version. \
-  about - Display developer info. \
-  help - Display list of terminal commands.
+help = version - Display program version. \n\
+  about - Display developer info. \n\
+  help - Display list of terminal commands. \n\
+  exit - Exit.
 about = Grigorii Mirsaitov\n\
   mirsaitov_gr@nlmk.com
 stub = The argument %s is not known.
