--- a/src/main/resources/MessagesBundle_ru.properties
+++ b/src/main/resources/MessagesBundle_ru.properties
@@ -1,7 +1,8 @@
 welcome = Добро пожаловать в диспетчер задач.
 help = version - Отобразить версию программы.\n\
   about - Показать информацию о разработчиках.\n\
-  help - Справка по возможностям программы.
+  help - Справка по возможностям программы. \n\
+  exit - Выход.
 about = Григорий Мирсаитов\n\
   mirsaitov_gr@nlmk.com
 stub = Аргумент %s не известен.
