Add project, task and operation.

--- a/src/main/resources/MessagesBundle.properties
+++ b/src/main/resources/MessagesBundle.properties
@@ -2,8 +2,18 @@ welcome = Welcome to task manager.
 help = version - Display program version. \n\
   about - Display developer info. \n\
   help - Display list of terminal commands. \n\
-  exit - Exit.
+  project-create [NAME] [DESCRIPTION] - Create project. \n\
+  project-clear - Clear projects. \n\
+  project-list - Display list of projects. \n\
+  task-create [NAME] [DESCRIPTION] - Create task. \n\
+  task-clear - Clear tasks. \n\
+  task-list - Display list of tasks. \n\
+  exit - Exit. 
 about = Grigorii Mirsaitov\n\
   mirsaitov_gr@nlmk.com
 stub = The argument %s is not known.
-version = 1.0.6
+projectCreate = Project is create.
+taskCreate = Task is create.
+projectClear = Projects is clear.
+taskClear = Tasks is clear.
+version = 1.0.7
