--- a/src/main/resources/MessagesBundle_ru.properties
+++ b/src/main/resources/MessagesBundle_ru.properties
@@ -2,8 +2,18 @@ welcome = Добро пожаловать в диспетчер задач.
 help = version - Отобразить версию программы.\n\
   about - Показать информацию о разработчиках.\n\
   help - Справка по возможностям программы. \n\
+  project-create [NAME] [DESCRIPTION] - Создать проект. \n\
+  project-clear - Очистить проекты. \n\
+  project-list - Отобразить проекты. \n\
+  task-create [NAME] [DESCRIPTION] - Создать задачу. \n\
+  task-clear - Очистить задачи. \n\
+  task-list - Отобразить список задач. \n\
   exit - Выход.
 about = Григорий Мирсаитов\n\
   mirsaitov_gr@nlmk.com
 stub = Аргумент %s не известен.
-version = 1.0.6
+projectCreate = Проект создан.
+taskCreate = Задача создана.
+projectClear = Проекты удалены.
+taskClear = Задачи удалены.
+version = 1.0.7
